# unitbus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/: dependabot.yaml
.github/workflows/: ci.yml
examples/: blocking_restart_and_wait.rs  diagnose_on_failure.rs  fetch_recent_logs.rs  list_units_and_properties.rs  observe_unit_failure.rs  render_service_unit.rs  restart_and_wait.rs  run_transient_task.rs
src/: blocking_api.rs  bus.rs  capabilities.rs  error.rs  fsutil.rs  lib.rs  manager.rs  observe.rs  options.rs  runtime.rs  units.rs  util.rs
src/journal/: cli.rs  mod.rs  sdjournal.rs
src/types/: config.rs  journal.rs  manager.rs  mod.rs  properties.rs  task.rs  unit.rs  unit_file.rs
tests/: integration_linux.rs
