[package]
name = "unitbus"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
license = "MIT"
description = "Rust SDK for Linux systemd: control units/jobs via D-Bus (systemctl-like), run transient tasks, and query journald logs (journalctl JSON)."
readme = "README.md"
documentation = "https://docs.rs/unitbus"
homepage = "https://github.com/lvillis/unitbus"
repository = "https://github.com/lvillis/unitbus"
keywords = ["systemd", "systemctl", "dbus", "journald", "journalctl"]
categories = ["os::linux-apis"]
include = [
    "Cargo.toml",
    "README.md",
    "README.zh-CN.md",
    "LICENSE",
    "CHANGELOG.md",
    "src/**",
    "examples/**",
    "tests/**"
]

[workspace]
resolver = "3"

[workspace.dependencies]
async-io = { version = "2.6.0", default-features = false }
async-process = { version = "2.5.0", default-features = false }
blocking = { version = "1.6.2", default-features = false }
futures-lite = { version = "2.6.1", default-features = false, features = ["std"] }
futures-util = { version = "0.3.31", default-features = false, features = ["async-await-macro", "std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.148", default-features = false, features = ["std"] }
smol = { version = "2.0.2", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
zbus = { version = "5.12.0", default-features = false, features = ["async-io"] }

[features]
default = ["journal-cli"]

journal-cli = ["dep:async-process", "dep:serde", "dep:serde_json"]
tasks = []
config = ["dep:blocking"]
observe = []
blocking = []
tracing = ["dep:tracing"]

[dependencies]
async-io = { workspace = true }
futures-lite = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

# journald backend
async-process = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# systemd D-Bus backend
zbus = { workspace = true }

# drop-in config (optional)
blocking = { workspace = true, optional = true }

[dev-dependencies]
smol = { workspace = true }

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
